# lyra

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
src-bedrock/: CMakeLists.txt
src-bedrock/render/: directx_hk.cpp  directx_hk.hpp
src-bedrock/src-client/bgfx/: bgfx.cpp  bgfx.hpp
src-bedrock/src-client/gui/: ScreenView.cpp  ScreenView.hpp
src-bedrock/src-client/gui/controls/renderers/: HudPlayerRenderer.hpp  SplashTextRenderer.cpp  SplashTextRenderer.hpp
src-bedrock/src-client/renderer/screen/: MinecraftUIRenderContext.cpp  MinecraftUIRenderContext.hpp
src-bedrock/src-client/uri/: GameArguments.cpp  GameArguments.hpp
src-bedrock/src-client/world/: BaseLightTextureImageBuilder.cpp  BaseLightTextureImageBuilder.hpp
src-client/: CMakeLists.txt  main.cpp
src-client/core/: builder.hpp  instance.cpp  instance.hpp
src-client/core/event/: event_types.hpp
src-client/core/platform/: all.hpp  console.cpp  data_folder.cpp  data_folder.hpp  hook.cpp  hook.hpp  title.cpp  title.hpp  version.cpp
src-client/memory/: member_at.hpp  memory.hpp  patches.cpp  patches.hpp  patterns.hpp  trampolines.hpp
src-client/memory/patterns/: latest_windows.hpp  loader.cpp
src/bedrock/: CMakeLists.txt  api.hpp
src/bedrock/render/: directx_hk.cpp  directx_hk.hpp
src/bedrock/src-client/bgfx/: bgfx.cpp  bgfx.hpp
src/bedrock/src-client/gui/: ScreenView.cpp  ScreenView.hpp
src/bedrock/src-client/gui/controls/renderers/: HudPlayerRenderer.hpp  SplashTextRenderer.hpp
src/bedrock/src-client/renderer/screen/: MinecraftUIRenderContext.cpp  MinecraftUIRenderContext.hpp
src/bedrock/src-client/uri/: GameArguments.cpp  GameArguments.hpp
src/bedrock/src-client/world/: BaseLightTextureImageBuilder.cpp  BaseLightTextureImageBuilder.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/client/command/: command.hpp  command_handler.hpp
src/client/command/impl/: Help.cpp  Help.hpp
src/client/core/: builder.cpp  instance.hpp  options.cpp  options.hpp
src/client/core/platform/: all.hpp  console.hpp  data_folder.hpp  handle.cpp  handle.hpp  title.hpp  version.hpp
src/client/event/: event_manager.hpp  event_types.hpp
src/client/feature/: feature.cpp  feature.hpp  feature_manager.hpp  setting.cpp  setting.hpp
src/client/feature/impl/render/: enchant_glint.cpp  enchant_glint.hpp  environment.cpp  environment.hpp  fullbright.cpp  fullbright.hpp  paperdoll.cpp  paperdoll.hpp
src/client/io/: config.hpp  flarial.hpp
src/client/memory/: member_at.hpp  patcher.hpp  patches.cpp  patterns.cpp  patterns.hpp  signatures.cpp  signatures.hpp  trampolines.hpp
src/client/memory/patches/render/: ScreenView.cpp  ScreenView.hpp
src/client/memory/patches/world/: BaseLightTextureImageBuilder.cpp
src/client/memory/patterns/: latest_windows.hpp  loader.cpp  loader.hpp
src/client/memory/sdk/client/: ClientInstanceScreenModel.cpp  ClientInstanceScreenModel.hpp
src/client/memory/sdk/core/: RenderItemInHandDescription.cpp  RenderItemInHandDescription.hpp
src/client/memory/sdk/core/math/: Color.hpp
src/client/memory/sdk/game/uri/: GameArguments.cpp  GameArguments.hpp
src/client/memory/sdk/gui/: ScreenView.cpp  ScreenView.hpp
src/client/memory/sdk/gui/controls/: UIComponent.hpp
src/client/memory/sdk/gui/controls/renderers/: HudPlayerRenderer.hpp  SplashTextRenderer.hpp
src/client/memory/sdk/gui/gui/: UIControl.hpp
src/client/memory/sdk/renderer/bgfx/: bgfx.cpp  bgfx.hpp
src/client/memory/sdk/renderer/screen/: MinecraftUIRenderContext.cpp  MinecraftUIRenderContext.hpp
src/client/memory/sdk/world/: BaseLightTextureImageBuilder.cpp  BaseLightTextureImageBuilder.hpp  Dimension.cpp  Dimension.hpp
src/client/platform/: platform.cpp  platform.hpp
src/src-native-plugin/: CMakeLists.txt  main.cpp
